wedy/wedy-record-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedy-record-redis
  labels:
    app: wedy-record-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wedy-record-redis
  template:
    metadata:
      name: wedy-record-redis
      labels:
        app: wedy-record-redis
    spec:
      containers:
        - name: wedy-record-redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
      restartPolicy: Always
