wedy/wedy-record-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedy-record-mysql
spec:
  selector:
    app: wedy-record-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
