wedy/wedy-record-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedy-record-redis
spec:
  selector:
    app: wedy-record-redis
  ports:
    - protocol: TCP
      #k8s内部端口
      port: 6379
      #向外部暴露的端口
      nodePort: 31379
      targetPort: 6379
  type: NodePort
