wedy/wedy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedy-record
spec:
  selector:
    app: wedy-record
  ports:
    - protocol: TCP
      port: 98
      targetPort: 8080
  type: ClusterIP
